<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="@style/setting_item_title_style"
        android:text="@string/lyrics_setting_tip"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_setting_item_stroke"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_lyrics_font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_setting_item_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:text="@string/lyrics_font_setting"
                style="@style/setting_item_textview_style"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:background="@color/appThemeColor"/>

        <LinearLayout
            android:id="@+id/ll_lyrics_other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_setting_item_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                style="@style/setting_item_textview_style"
                android:text="@string/lyrics_other_setting"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        style="@style/setting_item_title_style"
        android:text="@string/visible_music" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_setting_item_stroke"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_visible_circle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_setting_item_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp" >

            <TextView
                style="@style/setting_item_textview_style"
                android:text="@string/visible_music_circle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dp"
            android:background="@color/appThemeColor" />

        <LinearLayout
            android:id="@+id/ll_visible_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_setting_item_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp" >

            <TextView
                style="@style/setting_item_textview_style"
                android:text="@string/visible_music_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:text="@string/gaosi_setting"
        style="@style/setting_item_title_style"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_setting_item_stroke"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_gaosi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_setting_item"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="14dp" >

            <TextView
                style="@style/setting_item_textview_style"
                android:text="@string/gaosi_radius_setting"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>