<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:background="#f9ecd9"
              android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#d2be92"
        android:gravity="center"
        android:text="@string/download_music_type"
        android:textColor="#42aa0f"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#8b846b" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="播放模式" >

        <RadioButton
            android:id="@+id/type_64"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/selector_btn_blue_bg"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/download_type_64" >
        </RadioButton>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/appThemeColor" />

        <RadioButton
            android:id="@+id/type_128"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/selector_btn_blue_bg"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/download_type_standard" >
        </RadioButton>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/appThemeColor" />

        <RadioButton
            android:id="@+id/type_256"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/selector_btn_blue_bg"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/download_type_256" >
        </RadioButton>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/appThemeColor" />

        <RadioButton
            android:id="@+id/type_320"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/selector_btn_blue_bg"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/download_type_320" >
        </RadioButton>
    </RadioGroup>

</LinearLayout>